fix: matrix aligned in center

--- a/angular-epp/src/app/matrix/matrix.component.css
+++ b/angular-epp/src/app/matrix/matrix.component.css
@@ -1,9 +1,14 @@
 .main-container {
-  display: flex;
-  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: fit-content;
   border-width: 1px;
   border-style: solid;
